Added mental health screening

--- a/zvandiri-client/zvandiri-portal/src/main/resources/i18n/messages.properties
+++ b/zvandiri-client/zvandiri-portal/src/main/resources/i18n/messages.properties
@@ -31,6 +31,7 @@ patient.obstetrichistrecord=Client already has an obstetric history record
 patient.socialhistrecord=Client already has a social history record
 patient.substancerecord=Client already has this substance use record
 patient.familyhistrecord=Client already has a family record
+patient.mentalhealthscreenrecord=Client already has a mental health screening record
 item.select.one=Select at least one item in this list
 females.only=Only female beneficiaries can be in this group
 female.too.young=Too young to be a mom
