Added new disabilities screen

--- a/zvandiri-client/zvandiri-portal/src/main/resources/i18n/messages.properties
+++ b/zvandiri-client/zvandiri-portal/src/main/resources/i18n/messages.properties
@@ -41,4 +41,5 @@ referraldate.after.dateattended=Date attended cannot be before referral date
 patient.exists=Client already exists
 tnd.viralload.both=Both TND and Count cannot have a value
 tnd.viralload.missing=Both TND and Count cannot be missing
-medicine.duplicate=This medicne has already been selected
+medicine.duplicate=This medicine has already been selected
+patient.disabilityrecord=Client already has this disability record
